Fix incorrect spacing

--- a/ckanext/nhm/theme/less/nhm.less
+++ b/ckanext/nhm/theme/less/nhm.less
@@ -1061,7 +1061,7 @@ iframe {
     & > * {
       position: absolute;
       @media (max-width: @md - 1) {
-        bottom: 3.5em;
+        bottom: 1em;
       }
       @media (min-width: @md) {
         height: 5vw;
